--- a/index.html
+++ b/index.html
@@ -7,32 +7,67 @@
     <meta name="keywords" content="budget money savings" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <link rel="stylesheet" href="./style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <!-- <link rel="stylesheet" href="./style.css" /> -->
   </head>
-  <body>
+
+  <body style="width: 80%; margin: auto">
     <header>
-      <h1>Your budget made easy</h1>
-      <nav></nav>
+      <h1 class="h1 text-center">Irrelevant</h1>
     </header>
 
     <main>
-      <div class="movement__navbar">
-        <ul class="movement__navbar--ul">
-          <li class="movement__navbar--li movement__navbar--add">
-            Add transaction
-          </li>
-          <li class="movement__navbar--li movement__navbar--sort">Sort</li>
-          <li class="movement__navbar--li movement__navbar--filter">Filter</li>
-        </ul>
+      <div class="container-fluid">
+        <div class="row justify-content-end">
+          <div class="col-4 g-2">
+            <button type="button" class="btn btn-sm btn-light">
+              Add movement
+            </button>
+          </div>
+
+          <div class="col-2 col-sm-auto g-2">
+            <button type="button" class="btn btn-sm btn-light">Filter</button>
+          </div>
+          <div class="col-2 col-sm-auto g-2">
+            <button type="button" class="btn btn-sm btn-light">Sort</button>
+          </div>
+          <div class="col-4"></div>
+        </div>
       </div>
-      <div class="movement__div">
-        <ul class="movement__container--ul">
-          <li class="movement">10</li>
-          <li class="movement">15</li>
-          <li class="movement">10</li>
-        </ul>
+
+      <div class="container-fluid border my-2">
+        <div class="row">
+          <div class="col-8">
+            <div class="row text-center">
+              <div class="col-12">
+                <div class="row text-body-secondary">
+                  <div class="col-4">10/12/2023</div>
+                  <div class="col-4">Groceries</div>
+                  <div class="col-4">10£</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="row text-center">
+              <div class="col-12 border">Overview</div>
+              <div class="col-12 border">Accounts</div>
+              <div class="col-12 border">Goals</div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
