--- a/index.html
+++ b/index.html
@@ -18,14 +18,19 @@
 
   <body>
     <header>
-      <h1 class="h1 text-center">Irrelevant</h1>
+      <h1 class="h1 text-center text-uppercase">Irrelevant text</h1>
     </header>
 
     <main>
+      <!-- Action buttons -->
       <div class="container-lg">
         <div class="row justify-content-start g-0">
           <div class="col col-lg-8">
-            <button class="btn btn-sm btn-outline-secondary">
+            <button
+              class="btn btn-sm btn-outline-secondary"
+              data-bs-toggle="modal"
+              data-bs-target="#addTransactionModal"
+            >
               Add movement
             </button>
           </div>
@@ -44,6 +49,7 @@
 
       <div class="container-lg my-3">
         <div class="row">
+          <!-- Transactions container -->
           <div class="col col-lg-9 border" style="height: 600px">
             <div class="row text-center">
               <div class="col-4 p-3">Date</div>
@@ -51,6 +57,8 @@
               <div class="col-4 p-3">Value</div>
             </div>
           </div>
+
+          <!-- Accordion -->
           <div class="col col-lg-3">
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <div class="accordion-item">
@@ -132,6 +140,59 @@
         </div>
       </div>
     </main>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="addTransactionModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">
+              Add new transaction
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <div class="container-fluid">
+              <div class="col">
+                <label for="newTransactionCategory">Category:</label>
+                <input type="text" id="newTransactionCategory" />
+              </div>
+              <div class="col my-2">
+                <label for="newTransactionAmount">Amount: </label>
+                <input type="number" id="newTransactionAmount" />
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-bs-dismiss="modal"
+            >
+              Save changes
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
