--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <!-- Action buttons -->
       <div class="container-lg">
         <div class="row justify-content-start g-0">
-          <div class="col col-lg-8">
+          <div class="col-10 col-lg-8">
             <button
               class="btn btn-sm btn-outline-secondary"
               data-bs-toggle="modal"
@@ -34,7 +34,7 @@
               Add movement
             </button>
           </div>
-          <div class="col col-lg-1">
+          <div class="col-2 col-lg-1">
             <div class="btn-group" role="group" aria-label="Sort and Filter">
               <button type="button" class="btn btn-outline-secondary btn-sm">
                 Sort
@@ -50,16 +50,19 @@
       <div class="container-lg my-3">
         <div class="row">
           <!-- Transactions container -->
-          <div class="col col-lg-9 border" style="height: 600px">
+          <div
+            class="col-12 col-lg-9 border movement--container"
+            style="height: 600px"
+          >
             <div class="row text-center">
-              <div class="col-4 p-3">Date</div>
-              <div class="col-4 p-3">Category</div>
-              <div class="col-4 p-3">Value</div>
+              <div class="col-6 col-md-4 p-3">Date</div>
+              <div class="col-4 p-3 d-none d-md-block">Category</div>
+              <div class="col-6 col-md-4 p-3">Value</div>
             </div>
           </div>
 
           <!-- Accordion -->
-          <div class="col col-lg-3">
+          <div class="col-12 col-lg-3">
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <div class="accordion-item">
                 <h2 class="accordion-header">
@@ -184,7 +187,7 @@
             </button>
             <button
               type="button"
-              class="btn btn-primary"
+              class="btn btn-primary submitModal"
               data-bs-dismiss="modal"
             >
               Save changes
@@ -193,6 +196,8 @@
         </div>
       </div>
     </div>
+
+    <script src="./script.js"></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
