--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <meta name="keywords" content="budget money savings" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
+      href="./node_modules/bootstrap/dist/css/bootstrap.css"
     />
-    <!-- <link rel="stylesheet" href="./style.css" /> -->
   </head>
 
   <body>
@@ -198,11 +196,6 @@
     </div>
 
     <script src="./script.js"></script>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   </body>
 </html>
