Budget feature added

--- a/index.html
+++ b/index.html
@@ -83,8 +83,14 @@
                   data-bs-parent="#accordionFlushExample"
                 >
                   <div class="accordion-body">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
-                    explicabo facilis quis corrupti dolores eveniet eaque.
+                    <div class="overview--body">
+                      <p class="text-center text-muted">Budget</p>
+                    </div>
+                    <button
+                      class="btn btn-outline-secondary btn-sm btn--budget"
+                    >
+                      Change Budget
+                    </button>
                   </div>
                 </div>
               </div>
