major changes, MCV implemented, added Ids to transactions for future features

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <main>
       <!-- Action buttons -->
-      <div class="container-lg">
+      <div class="container-lg movements--nav">
         <div class="row justify-content-start g-0">
           <div class="col-10 col-lg-8">
             <button
@@ -178,6 +178,7 @@
             <button
               type="button"
               class="btn btn-danger d-none btn--deleteTransaction"
+              data-bs-dismiss="modal"
             >
               Delete
             </button>
