filter functionality added

--- a/index.html
+++ b/index.html
@@ -38,19 +38,23 @@
           </div>
           <div class="col-2 col-lg-1">
             <div class="dropdown">
-              <button
-                class="btn btn-secondary dropdown-toggle"
-                type="button"
+              <a
+                class="btn btn-outline-secondary btn-sm dropdown-toggle"
+                href="#"
+                role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Dropdown button
-              </button>
+                Filters
+              </a>
+
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                <div class="dropdown-menu--content">
+                  
+                <li class="text-center">
+                  <button class="btn btn-outline-success btn-sm">
+                    Apply Filter
+                  </button>
                 </li>
               </ul>
             </div>
