Clear filters functionality added

--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@
                 <div class="dropdown-menu--content">
                   
                 <li class="text-center">
-                  <button class="btn btn-outline-success btn-sm">
-                    Apply Filter
+                  <button class="btn btn-outline-success btn-sm btn--apply" data-target="apply">
+                    Apply
+                  </button>
+                  <button class="btn btn-outline-secondary btn-sm btn--clear" data-target="clear">
+                    Clear
                   </button>
                 </li>
               </ul>
