--- a/index.html
+++ b/index.html
@@ -49,13 +49,40 @@
               </a>
 
               <ul class="dropdown-menu">
-                <div class="dropdown-menu--content">
-                  
+                <div class="dropdown-item dropdown-menu--date">
+                  <select name="month" id="selectMonth">
+                    <option value="Jan">Jan</option>
+                    <option value="Feb">Feb</option>
+                    <option value="Mar">Mar</option>
+                    <option value="Apr">Apr</option>
+                    <option value="Mai">Mai</option>
+                    <option value="Jun">Jun</option>
+                    <option value="Jul">Jul</option>
+                    <option value="Ago">Ago</option>
+                    <option value="Sep">Sep</option>
+                    <option value="Oct">Oct</option>
+                    <option value="Nov">Nov</option>
+                    <option value="Dec">Dec</option>
+                  </select>
+                  <select name="year" id="selectYear">
+                    <option value="2022">2022</option>
+                    <option value="2023">2023</option>
+                  </select>
+                </div>
+                <li><hr class="dropdown-divider" /></li>
+                <div class="dropdown-menu--category"></div>
+                <li><hr class="dropdown-divider" /></li>
                 <li class="text-center">
-                  <button class="btn btn-outline-success btn-sm btn--apply" data-target="apply">
+                  <button
+                    class="btn btn-outline-success btn-sm btn--apply"
+                    data-target="apply"
+                  >
                     Apply
                   </button>
-                  <button class="btn btn-outline-secondary btn-sm btn--clear" data-target="clear">
+                  <button
+                    class="btn btn-outline-secondary btn-sm btn--clear"
+                    data-target="clear"
+                  >
                     Clear
                   </button>
                 </li>
