--- a/index.html
+++ b/index.html
@@ -30,14 +30,23 @@
       <!-- Action buttons -->
       <div class="container-lg movements--nav">
         <div class="row justify-content-start g-0">
-          <div class="col-10 col-lg-8">
+          <div class="col-10 col-lg-2 w-auto">
             <button
               class="btn btn-sm btn-outline-secondary btn--addTransaction"
             >
               Add transaction
             </button>
           </div>
-          <div class="col-2 col-lg-1">
+          <div class="col-lg-7 d-lg-block text-center overviewContainer">
+            <p>
+              Income
+              <span class="text-success">22</span>
+              Expenses
+              <span class="text-danger">25</span>
+              <span class="text-danger">(-3)</span>
+            </p>
+          </div>
+          <div class="col-2 col-lg-1 w-auto">
             <div class="dropdown">
               <a
                 class="btn btn-outline-secondary btn-sm dropdown-toggle"
