--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
       href="./node_modules/bootstrap/dist/css/bootstrap.css"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
+
     <style>
-      .movement--row:hover {
+      .movement--row:hover,
+      .accounts-row:hover {
         background-color: #eee;
+        cursor: pointer;
       }
     </style>
   </head>
@@ -165,13 +172,63 @@
                   class="accordion-collapse collapse"
                   data-bs-parent="#accordionFlushExample"
                 >
-                  <div class="accordion-body">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Cumque reprehenderit sint ipsam autem, atque blanditiis
-                    cupiditate!
+                  <div class="accordion-body accounts-container">
+                    <div class="container-fluid m-0">
+                      <div
+                        class="row accounts-row p-2 accounts-container--list"
+                        data-target="account"
+                      >
+                        <div class="col">Main Account</div>
+                      </div>
+                    </div>
+                    <div class="row g-2 mt-2 mb-2 accounts-form d-none">
+                      <div class="row p-0">
+                        <div class="col-8 p-1">
+                          <input
+                            class="form-control accounts-form--input"
+                            type="text"
+                            placeholder="Account name"
+                            aria-label="insert new account name"
+                          />
+                        </div>
+                        <div class="col-4 p-1">
+                          <div
+                            class="btn-group"
+                            role="group"
+                            aria-label="Basic example"
+                          >
+                            <button
+                              type="button"
+                              class="btn btn-outline-success btn-accounts-add accounts-event"
+                              data-target="addAccount"
+                            >
+                              <i class="bi bi-check-circle"></i>
+                            </button>
+                            <button
+                              type="button"
+                              class="btn btn-outline-danger btn-accounts-cancel accounts-event"
+                              data-target="cancelAdition"
+                            >
+                              <i class="bi bi-x-lg"></i>
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row p-2 text-center">
+                      <div class="col">
+                        <button
+                          class="btn btn-sm btn-outline-secondary accounts-row accounts-event"
+                          data-target="display-newAccountForm"
+                        >
+                          Add new Account
+                        </button>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
+
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button
