minor changes to how buttons and form are displayed in the accountsView

--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
                     <div class="row p-2 text-center">
                       <div class="col">
                         <button
-                          class="btn btn-sm btn-outline-secondary accounts-row accounts-event"
+                          class="btn btn-sm btn-outline-secondary accounts-display--form accounts-event"
                           data-target="display-newAccountForm"
                         >
-                          Add new Account
+                          <i class="bi bi-plus-lg"></i> New Account
                         </button>
                       </div>
                     </div>
