Accounts added aswell as creating and swapping between accounts

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                   <div class="accordion-body accounts-container">
                     <div class="container-fluid m-0">
                       <div
-                        class="row accounts-row p-2 accounts-container--list"
+                        class="row p-2 accounts-container--list"
                         data-target="account"
                       >
                         <div class="col">Main Account</div>
