Added account type selector

--- a/index.html
+++ b/index.html
@@ -183,6 +183,17 @@
                     </div>
                     <div class="row g-2 mt-2 mb-2 accounts-form d-none">
                       <div class="row p-0">
+                        <select
+                          name="month"
+                          class="form-select form-select-sm"
+                          id="selectAccountType"
+                        >
+                          <option value="Savings">Savings</option>
+                          <option value="Investing">Investing</option>
+                          <option value="CurrentAccount">CurrentAccount</option>
+                        </select>
+                      </div>
+                      <div class="row p-0">
                         <div class="col-8 p-1">
                           <input
                             class="form-control accounts-form--input"
