Changed account delete button on AccountView to be displayed when container is hovered for a cleaner look

--- a/index.html
+++ b/index.html
@@ -19,18 +19,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
 
-    <style>
-      .form-select--from,
-      .movement--row:hover,
-      .accounts-row:hover {
-        background-color: #eee;
-        cursor: pointer;
-      }
-
-      option[disabled] {
-        background-color: #eee;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
