--- a/index.html
+++ b/index.html
@@ -20,9 +20,36 @@
     />
 
     <link rel="stylesheet" href="style.css" />
+
+    <style>
+      .alert-container {
+        position: fixed;
+        left: 50%;
+        transform: translateX(-50%);
+        border-bottom-left-radius: 16px;
+        border-bottom-right-radius: 16px;
+        width: 30%;
+        margin: auto;
+      }
+
+      .alert-error {
+        background-color: red;
+      }
+
+      .alert-success {
+        background-color: rgba(0, 160, 0);
+      }
+
+      .alert-message {
+        color: white;
+        text-align: center;
+        padding: 16px;
+        margin: 0;
+        font-family: sans-serif;
+      }
+    </style>
   </head>
 
-  <body>
     <header>
       <h1 class="h1 text-center text-uppercase">Relevant text</h1>
     </header>
