--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                   class="accordion-collapse collapse"
                   data-bs-parent="#accordionFlushExample"
                 >
-                  <div class="accordion-body accounts-container">
+                  <div class="accordion-body accounts-container p-0">
                     <div class="container-fluid m-0">
                       <div
                         class="row p-2 accounts-container--list"
