CSS added and overviewView updated

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     </header>
 
     <main>
-      <div class="overview--container">
+      <div class="container">
+         <div class="overview--container">
         <h2 class="overview__balance"></h2>
         <div class="overviewContainer">
           <p>
@@ -66,7 +67,8 @@
             <span class="text-danger">(0)</span>
           </p>
         </div>
-      </div>
+      </div></div>
+      
       <!-- Action buttons -->
       <div class="container-lg movements--nav">
         <div class="row justify-content-start g-0">
