Movements container and movements heights updated
height and overflow updated to only allow 10 movements visible for future pagination

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             <span class="text-danger">(0)</span>
           </p>
         </div>
-      </div></div>
+      </div>
+      </div>
       
       <!-- Action buttons -->
       <div class="container-lg movements--nav">
@@ -140,9 +141,7 @@
         <div class="row">
           <!-- Transactions container -->
           <div
-            class="col-12 col-lg-9 border movement--container"
-            style="height: 600px"
-          >
+            class="col-12 col-lg-9 border movement--container">
             <div class="row text-center">
               <div class="col-12 p-3 text-muted">No more transactions</div>
             </div>
