Added paginationView as well as eventHandler
Added paginationView and eventHandler, newTransactions cause bug if number of elements per page is surpassed with the new transaction

--- a/index.html
+++ b/index.html
@@ -141,9 +141,12 @@
         <div class="row">
           <!-- Transactions container -->
           <div
-            class="col-12 col-lg-9 border movement--container">
-            <div class="row text-center">
+            class="col-12 col-lg-9 p-0">
+            <div class="row text-center movement--container border">
               <div class="col-12 p-3 text-muted">No more transactions</div>
+            </div>
+            <div class="pagination-container">
+              
             </div>
           </div>
 
@@ -294,6 +297,7 @@
           </div>
         </div>
       </div>
+      
     </main>
 
     <!-- Modal -->
