Removed Bootstrap from transactions container
Turned transactions into flexboxes, removing need for bootstrap

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     </div>
 
     <div class="transactions--container">
-          <div class="row text-center movement--container border">
+          <div class="row text-center movements--container border">
             <div class="col-12 p-3 text-muted">No more transactions</div>
           </div>
             
