Account View improved toggleing of classes
Weird method used in the past, changed to a toggle method

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <div>Main Account</div>
             </div>
 
-            <div class="accounts-form d-none">
+            <div class="accounts-form display-none">
                 <select
                   name="month"
                   class="form-select form-select-sm"
