Added grid to modal to remove Javascript from category Picker

--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
                 aria-label="Close"
               ></button>
             </div>
-            <div class="modal-body">
-              <div class="container-fluid mb-1 modalContent"></div>
+            <div class="modal-body modal-content--container">
+              <div class="container-fluid mb-1 "></div>
               <div
                 class="modal-error d-none text-light bg-danger text-center border rounded"
               >
