--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 aria-label="Close"
               ></button>
             </div>
-            <div class="modal-body modal-content--container">
+            <div class="modal-body">
               <div class="container-fluid mb-1 "></div>
               <div
                 class="modal-error d-none text-light bg-danger text-center border rounded"
