Fixed date bug on transaction update

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                 <label class="datepicker-label datepicker-month__label" for="datepicker-month__jul">Jul</label>
             </div>
             <div class="datepicker-input__container">
-                <input type="radio" name="month" class="datepicker-radios datepicker-month__radio" id="datepicker-month__ago" value="Ago">
-                <label class="datepicker-label datepicker-month__label" for="datepicker-month__ago">Ago</label>
+                <input type="radio" name="month" class="datepicker-radios datepicker-month__radio" id="datepicker-month__ago" value="Aug">
+                <label class="datepicker-label datepicker-month__label" for="datepicker-month__ago">Aug</label>
             </div>
             <div class="datepicker-input__container">
                 <input type="radio" name="month" class="datepicker-radios datepicker-month__radio" id="datepicker-month__sep" value="Sep">
