--- a/index.html
+++ b/index.html
@@ -382,11 +382,11 @@
     <script type="importmap">
       {
         "imports": {
-          "@popperjs/core": "./node_modules/@popperjs/core/dist/esm/popper.js",
-          "bootstrap": "./node_modules/bootstrap/dist/js/bootstrap.esm.min.js"
+          "@popperjs/core": "https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/esm/popper.min.js",
+          "bootstrap": "https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.esm.min.js"
         }
       }
-    </script>
+      </script>
 
     <script src="./assets/js/index.js" type="module"></script>
   </body>
