--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link
       rel="stylesheet"
-      href="./node_modules/bootstrap/dist/css/bootstrap.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
 
     <link
@@ -321,11 +321,10 @@
               </div>
             </div>
           </div>
-      
     </main>
 
     <!-- Modal -->
-    <div
+    <!-- <div
       class="modal fade"
       id="addTransactionModal"
       tabindex="-1"
@@ -375,18 +374,17 @@
           </form>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-
+    <script async src="https://cdn.jsdelivr.net/npm/es-module-shims@1/dist/es-module-shims.min.js" crossorigin="anonymous"></script>
     <script type="importmap">
-      {
-        "imports": {
-          "@popperjs/core": "https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/esm/popper.min.js",
-          "bootstrap": "https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.esm.min.js"
-        }
+    {
+      "imports": {
+        "@popperjs/core": "https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/esm/popper.min.js",
+        "bootstrap": "https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.esm.min.js"
       }
-      </script>
+    }
+    </script>
 
     <script src="./assets/js/index.js" type="module"></script>
   </body>
