--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <style>
       .alert-container {
         position: fixed;
+        z-index:3;
         left: 50%;
         transform: translateX(-50%);
         border-bottom-left-radius: 16px;
